# VRProject

./: .gitignore  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Object.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  main.cpp
report/: exp.tex  report.tex
result/experiments_20260617_152548/: summary.csv
result/experiments_20260617_153538/: summary.csv
result/experiments_20260626_101547/: bvh_scaling.csv  meta.txt  summary.csv  thread_scaling.csv
tools/: ply_to_obj.py  render_beauty.sh  run_experiments_ubuntu.sh
